--- a/CSS/ex003/projecto-cordel.html
+++ b/CSS/ex003/projecto-cordel.html
@@ -10,7 +10,7 @@
 
 <body>
         <header>
-            <h1>Cordel Moderno</h1>
+            <h1>Projecto Cordel Moderno</h1>
             <p>
                 Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
             </p>
@@ -28,7 +28,7 @@
            </p>  
         </section>
  
-        <section class="imagem">
+        <section class="imagem" id="id1">
             <p>
                 Não é mais como era antes <br>
                 É tudo abreviado <br>
@@ -64,7 +64,7 @@
            
         </section>
 
-        <section class="imagem">
+        <section class="imagem" id="id2">
             <p>
                 Tenho saudade das cartas <br>
                 Escritas com a própria mão <br>
